# password-handler-back-end/src/backend_api/controllers/Password.js
@@ -3,8 +3,8 @@
 var utils = require('../utils/writer.js');
 var Password = require('../service/PasswordService');
 
-module.exports.createPassword = function createPassword (req, res, next, body, uname, userToken) {
-  Password.createPassword(body, uname, userToken)
+module.exports.createPassword = function createPassword (req, res, next, body, uname, user_token) {
+  Password.createPassword(body, uname, user_token)
     .then(function (response) {
       utils.writeHeaders(res, null, response);
     })
@@ -13,8 +13,8 @@ module.exports.createPassword = function createPassword (req, res, next, body, u
     });
 };
 
-module.exports.decryptPassword = function decryptPassword (req, res, next, body, uname, userToken) {
-  Password.decryptPassword(body, uname, userToken)
+module.exports.decryptPassword = function decryptPassword (req, res, next, body, uname, user_token) {
+  Password.decryptPassword(body, uname, user_token)
     .then(function (response) {
       utils.writeJson(res, response);
     })
