# password-handler-back-end/src/backend_api/controllers/Passwords.js
@@ -3,8 +3,9 @@
 var utils = require('../utils/writer.js');
 var Passwords = require('../service/PasswordsService');
 
-module.exports.readPasswords = function readPasswords (req, res, next, uname, userToken) {
-  Passwords.readPasswords(uname, userToken)
+module.exports.readPasswords = function readPasswords (req, res, next, uname, user_token) {
+  console.log(user_token);
+  Passwords.readPasswords(uname, user_token)
     .then(function (response) {
       utils.writeJson(res, response);
     })
