# password-handler-back-end/src/backend_api/controllers/User.js
@@ -9,7 +9,7 @@ module.exports.confirmIpUser = function confirmIpUser (req, res, next, body, una
       utils.writeHeaders(res, null, response);
     })
     .catch(function (response) {
-      writeErrorCode(res, response);
+      utils.writeErrorCode(res, response);
     });
 };
 
@@ -19,7 +19,7 @@ module.exports.createUser = function createUser (req, res, next, body) {
       utils.writeHeaders(res, null, 201);
     })
     .catch(function (response) {
-      writeErrorCode(res, response);
+      utils.writeErrorCode(res, response);
     });
 };
 
@@ -29,7 +29,7 @@ module.exports.deleteUser = function deleteUser (req, res, next, uname, user_tok
       utils.writeHeaders(res, null, response);
     })
     .catch(function (response) {
-      writeErrorCode(res, response);
+      utils.writeErrorCode(res, response);
     });
 };
 
@@ -39,18 +39,19 @@ module.exports.getUname = function getUname(req, res, next, identification) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      writeErrorCode(res, response);
+      utils.writeErrorCode(res, response);
     });
 
 }
 
 module.exports.getUserByName = function getUserByName (req, res, next, uname, user_token) {
+  console.log(user_token);
   User.getUserByName(uname, user_token)
     .then(function (response) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      writeErrorCode(res, response);
+      utils.writeErrorCode(res, response);
     });
 };
 
@@ -60,7 +61,7 @@ module.exports.loginUser = function loginUser (req, res, next, body, uname) {
       utils.writeHeaders(res, response, 200);
     })
     .catch(function (response) {
-      writeErrorCode(res, response);
+      utils.writeErrorCode(res, response);
     });
 };
 
@@ -70,7 +71,7 @@ module.exports.logoutUser = function logoutUser (req, res, next, uname, user_tok
       utils.writeHeaders(res, null, response);
     })
     .catch(function (response) {
-      writeErrorCode(res, response);
+      utils.writeErrorCode(res, response);
     });
 };
 
@@ -80,16 +81,6 @@ module.exports.updateUser = function updateUser (req, res, next, body, uname, us
       utils.writeHeaders(res, null, response);
     })
     .catch(function (response) {
-      writeErrorCode(res, response);
+      utils.writeErrorCode(res, response);
     });
 };
-
-function writeErrorCode(res, response) {
-  if (Number.isInteger(response)){
-    utils.writeHeaders(res, null, response);
-  }
-  else {
-    utils.writeHeaders(res, null, 400);
-
-  }
-}
